Bug 1157097 - Don't share a style context that will have its cached style data cleared. r=dbaron